--- a/index.html
+++ b/index.html
@@ -6,6 +6,64 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>GEM - Email</title>
+    <style>
+        * {
+            text-align: center;
+            font-family: sans-serif;
+        }
+
+        .email {
+            background-color: #000000;
+            max-width: 800px;
+            margin: 0 auto;
+        }
+
+        .hide {
+            display: none;
+        }
+
+        .container,
+        .footer {
+            max-width: 500px;
+            margin: 0 auto;
+            padding: 50px 0;
+        }
+
+        .container {
+            background: white;
+        }
+
+        img {
+            max-width: 85%;
+        }
+
+        img:nth-child(1) {
+            margin: 10px 0;
+            left: 0;
+        }
+
+        .container a {
+            text-decoration: none;
+            display: inline-block;
+            background: black;
+            color: rgb(198, 198, 198);
+            padding: 10px 20px 10px;
+            border-radius: 5px;
+            text-decoration: underline;
+        }
+
+        p {
+            padding-left: 15px;
+            padding-right: 15px;
+        }
+
+        .footer {
+            font-size: 9px;
+            color: rgb(198, 198, 198);
+            padding-left: 25px;
+            padding-right: 25px;
+        }
+    </style>
 </head>
 
 <body>
